# actix_middleware

./: Cargo.toml  README.md
src/: config.rs  main.rs  middleware.rs  models.rs
src/handlers/: auth.rs  mod.rs  user_handler.rs
