[package]
name = "actixweb"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-rt = "2.10.0"
actix-web-httpauth = "0.8"
serde = { version="1.0.219",features=["derive"] }
dotenv = "0.15.0"
config = "0.15.11"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
actix-cors = "0.7"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
futures-util = "0.3"